# docsee-tui

./: .editorconfig  .gitignore  ARM64_FIX_GUIDE.md  ARM64_ISSUE_RESOLVED.md  CLIPPY_FIX_GUIDE.md  CROSS_COMPILATION_TROUBLESHOOTING.md  Cargo.toml  Cross.toml  GITHUB_ACTIONS_FIXES.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PIPELINE_STATUS_FINAL.md  README.md  test_build.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: fix-clippy.sh  fix-format-strings.sh  install.sh
src/: app.rs  config.rs  lib.rs  main.rs  theme.rs
src/docker/: client.rs  containers.rs  images.rs  mod.rs  networks.rs  system.rs  volumes.rs
src/events/: handler.rs  key.rs  mod.rs
src/tests/: integration_test.rs
src/ui/: cheatsheet.rs  containers.rs  images.rs  inspect_viewer.rs  logs_viewer.rs  mod.rs  networks.rs  search_filter.rs  shell_executor.rs  stats_viewer.rs  system.rs  topology.rs  volumes.rs
src/widgets/: mod.rs  modal.rs
